# haplea

./: .gitignore  Cargo.toml  README.md  angular.json  build.zig  build.zig.zon  karma.conf.js  package-lock.json  package.json  tsconfig.app.json  tslint.json  zed-keymap.json
crates/haplea/: Cargo.toml
crates/haplea-common/: Cargo.toml
crates/haplea-common/src/: error.rs  lib.rs  types.rs
crates/haplea-parser/: Cargo.toml
crates/haplea-parser/src/: lib.rs  scanner.rs  token.rs
crates/haplea/src/: config.rs  main.rs
crates/haplea/src/discovery/: mod.rs
crates/haplea/src/server/: mod.rs
docs/: About.md  Indexing.md  Parser.md  Ranked-Retrival.md  Search.md  Todo.md
docs/recipe-examples/: carbonara.md  chicken-stir-fry.md  chocolate-chip-cookies.md  greek-salad.md  guacamole.md  pad-krapowe-moo.md  ramen.md  scrambled-eggs-recipe.md  tomato-soupt.md
e2e/src/: app.e2e-spec.ts
frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  index.css
libs/: types.ts
parser/: Cargo.toml  README.md
parser/src/: lib.rs
parser/tests/: wasm_test.rs
scripts/: build.sh
src/: app_paths.zig  embedded_assets.zig  index.html  indexing.zig  lexer.zig  main.zig  markdown.zig  markdown_parser.zig  ngrams.zig  parser.zig  posting.zig  recipe_extractor.zig  recipe_parser.zig  reverse_index.zig  styles.scss
src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
src/app/command-interpreter/: IntentCommand.ts  command-interpreter.module.ts  input-commands.service.ts  wit-interpreter.service.ts
src/markdown/: parser.zig
src/reverse_index/: posting.zig  ranking.zig
src/text/: stop_words.zig
(+54 files in other folders)
