[workspace]
resolver = "2"
members = [
    "crates/haplea",
    "crates/haplea-parser",
    "crates/haplea-common",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dragos Tudorache"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies across workspace
# Want to build it myself!
# pulldown-cmark = "0.9"
mdns-sd = "0.11"
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
hostname = "0.3"
uuid = { version = "1.6", features = ["v4"] }
