[package]
name = "haplea"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "haplea"
path = "src/main.rs"

[dependencies]
haplea-parser = { path = "../haplea-parser" }
haplea-common = { path = "../haplea-common" }

mdns-sd.workspace = true
tokio.workspace = true
axum.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
